RE: https://github.com/telecelplay/home/issues/320 - refactor duplicated code